fixing col, card and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,7 @@ img{
 .row .col{
     float: left;
     width: calc(100%/3);
-    background-color: black;
-    margin: 10px;
+    padding: 10px;
 }
 
 .clearfix::after{
@@ -40,4 +39,13 @@ img{
 
 .container-photo{
     color: white;
+}
+
+.card{
+    background-color: black;
+}
+
+text{
+    display: inline;
+    vertical-align: middle;
 }
